JCS-122: Introduce log abstraction