@@ -40,10 +40,11 @@
 
   <dependencies>
 
-    <!--  REQUIRED FOR JCS CORE -->
     <dependency>
-      <groupId>commons-logging</groupId>
-      <artifactId>commons-logging</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.13.1</version>
+      <optional>true</optional>
     </dependency>
 
     <!--  JDBC DISK CACHE -->
@@ -123,7 +124,12 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${commons.surefire.version}</version>
           <configuration>
-            <argLine>-Xmx256m -Djava.security.manager -Djava.security.policy=${basedir}/src/test/conf/cache.policy</argLine>
+            <systemPropertyVariables>
+              <java.security.manager>true</java.security.manager>
+              <java.security.policy>${basedir}/src/test/conf/cache.policy</java.security.policy>
+              <java.util.logging.config.file>${basedir}/src/test/test-conf/logging.properties</java.util.logging.config.file>
+            </systemPropertyVariables>              
+            <argLine>-Xmx256m</argLine>
             <forkCount>1</forkCount>
             <reuseForks>false</reuseForks>
             <includes>
